--- a/laurentperez.fr/talks/webkit/index.html
+++ b/laurentperez.fr/talks/webkit/index.html
@@ -354,6 +354,16 @@
 				</section>
 
 				<section>
+					<p>Abstract<br>
+					En 1990 le Web naissait au CERN avec son 1er navigateur, WorldWideWeb
+					Aujourd'hui Firefox, Chrome, Safari, IE, Opera... sont des noms de navigateurs connus de toutes et tous, technophiles averti(e)s ou non.
+					Mais les noms de WebKit, Gecko, Servo ou encore Blink sont eux moins connus : ce sont pourtant les moteurs Open Source qui se cachent derrière ces navigateurs que l'on utilise tous les jours 
+					Du desktop au mobile en passant par les consoles de jeux, l'IoT, les Smart TVs ou encore les kiosques ou l'automobile, les moteurs sont partout et sous des formes aussi diverses que leurs contenants
+					Ce talk vous emmène explorer l'histoire parfois mouvementée des moteurs, leur passé leur présent mais également leur devenir.
+					</p>
+				</secction>
+
+				<section>
 					<h2>⚙️ Le moteur WebKit & les autres ⚙️</h2>
 					<p>Bref historique</p>
 					<ul>
