--- a/laurentperez.fr/talks/webkit/index.html
+++ b/laurentperez.fr/talks/webkit/index.html
@@ -352,7 +352,7 @@
 					<img src="mario.png" width="300px" alt="">
 					<p>embarqué dans automobile, Smart TVs, kiosques (NetFront) ...</p>
 				</section>
-
+<!--
 				<section>
 					<p>Abstract<br>
 					En 1990 le Web naissait au CERN avec son 1er navigateur, WorldWideWeb
@@ -361,7 +361,7 @@
 					Du desktop au mobile en passant par les consoles de jeux, l'IoT, les Smart TVs ou encore les kiosques ou l'automobile, les moteurs sont partout et sous des formes aussi diverses que leurs contenants
 					Ce talk vous emmène explorer l'histoire parfois mouvementée des moteurs, leur passé leur présent mais également leur devenir.
 					</p>
-				</secction>
+				</secction>-->
 
 				<section>
 					<h2>⚙️ Le moteur WebKit & les autres ⚙️</h2>
@@ -445,7 +445,7 @@
 					<img src="logo.png" style="width:120px" style="border: none"/>
 					<p><a href="https://www.webkit.org/building/checkout.html">https://www.webkit.org/building/checkout.html</a></p>
 					<p>4 GB. 35000 tests. 900MB de sources C++, 210000 commits. Projet XCode ou Visual Studio</p>
-					<p>~70% des 4GB sont des tests et ressources de tests (pages HTML, images, vidéos, audio, fichiers JS/CSS)</p>
+					<p>Fun fact : ~70% des 4GB sont des tests et ressources de tests (pages HTML, images, vidéos, audio, fichiers JS/CSS)</p>
 					<p>25 minutes de compile sur un très bon CPU</p>
 					<p>dedans : WebCore, JavaScriptCore, WebInspectorUI, WPE, WTF, MiniBrowser, DumpRenderTree, ...</p>
 				</section>
