--- a/laurentperez.fr/talks/webkit/index.html
+++ b/laurentperez.fr/talks/webkit/index.html
@@ -69,7 +69,8 @@
 
 				<section>
 					<h2>Nos hôtes</h2>
-					<p>TBD</p>					
+					<p>TBD</p>	
+					<p>Line mode cern</p>				
 				</section>
 
 				<section>
@@ -97,7 +98,7 @@
 				</section>
 
 				<section>
-					<h2>Un exemple simple</h2>
+					<h2>Une analogie simple</h2>
 					<p>Points commun avec le moteur Mercedes AMG F1 W0x</p>
 					<p>Slide 1 sur 12</p>
 					<p>
@@ -105,6 +106,13 @@
 					</p>
 					<p>Chapitre 1 : architecture des composants PU, MGU-H et MGU-K/KERS dans les homologations FIA</p>
 					<p>... ou on va plutôt parler du Web</p>
+				</section>
+
+				<section>
+					<h2>What's up, Web ?</h2>
+					<p>1991 : le <a href="http://line-mode.cern.ch/www/hypertext/WWW/TheProject.html"> Line Mode Browser</a></p>
+					<p>Avec sa 1ère base de code commune pour fabriquer des navigateurs : libwww, qui sera supplée par libcurl</p>
+					<p>... avance rapide en 2020, ça a - un peu - évolué</p>
 				</section>
 
 				<section>
@@ -121,7 +129,7 @@
 					</figure>
 					<figure>
 						<img src="sauron.jpg" width="110px" alt="">
-						<figcaption>un des moteurs</figcaption>
+						<figcaption>un des GAFA</figcaption>
 					</figure>
 					
 					<p>Dualité d'Apple et de Google qui ont partagé un moteur commun jusqu'en 2013 : WebKit, né en 2001, issu du monde Linux</p>
