--- a/laurentperez.fr/talks/webkit/index.html
+++ b/laurentperez.fr/talks/webkit/index.html
@@ -62,20 +62,30 @@
 					<h3>Talk 1/2</h3>
 					<h3>Comment fonctionne un moteur de rendu ?</h3>
 					<h3>Talk 2/2</h3>
-					<p>Hôte TBD / Meetup Web Front #2</p>
+					<p>Hôte TODO / Meetup Web Front #2</p>
 					<p>@laurentperez - Slack Comm MPL</p>
 					<img src="mth.jpg" width="100px"/>
 				</section>
 
 				<section>
 					<h2>Nos hôtes</h2>
-					<p>TBD</p>	
+					<p>AFUP / salle TODO</p>	
+				</section>
+
+
+				<section>
+					<h2>About me</h2>
+					<p>@laurentperez</p>
+					<p>Voyages SNCF, Credit Agricole, Banque Populaire, Canal+, Intersport...</p>
+					<p>Back et front</p>
+					<p>❤️ le web</p>
 				</section>
 
 				<section>
 					<h2>About you</h2>
 					<p>Ratio iOS/Android/autres dans la salle ?</p>
 					<p>Qui s'est servi d'un navigateur web ce jour ?</p>
+					<p>WebKit, Servo, Gecko, Trident... ?</p>
 				</section>
 
 				<section>
