--- a/laurentperez.fr/talks/webkit/index.html
+++ b/laurentperez.fr/talks/webkit/index.html
@@ -63,7 +63,6 @@
 					<h3>Comment fonctionne un moteur de rendu ?</h3>
 					<h3>Talk 2/2</h3>
 					<p>Hôte TODO / Meetup Web Front #2</p>
-					<p>@laurentperez - Slack Comm MPL</p>
 					<img src="mth.jpg" width="100px"/>
 				</section>
 
@@ -74,9 +73,9 @@
 
 
 				<section>
-					<h2>About me</h2>
-					<p>@laurentperez</p>
-					<p>Voyages SNCF, Credit Agricole, Banque Populaire, Canal+, Intersport...</p>
+					<h2>About your speaker</h2>
+					<p>@laurentperez - Slack Comm MPL</p>
+					<p>SFR, Voyages SNCF, Credit Agricole, Banque Populaire, Canal+, Intersport...</p>
 					<p>Back et front</p>
 					<p>❤️ le web</p>
 				</section>
@@ -108,8 +107,8 @@
 
 				<section>
 					<h2>Une analogie simple</h2>
-					<p>Points commun avec le moteur Mercedes AMG F1 W0x</p>
-					<p>Slide 1 sur 12</p>
+					<p>Points communs avec le moteur Mercedes AMG F1 W0x</p>
+					<p>Slide 1 sur 80</p>
 					<p>
 						<img src="f1.jpg" width="400px" style="border: none">
 					</p>
@@ -120,10 +119,22 @@
 				<section>
 					<h2>What's up, Web ?</h2>
 					<p>1991 : le <a href="http://line-mode.cern.ch/www/hypertext/WWW/TheProject.html"> Line Mode Browser</a></p>
-					<p>Avec sa 1ère base de code commune pour fabriquer des navigateurs : libwww, qui sera supplée par libcurl</p>
-					<p>... avance rapide en 2020, ça a - un peu - évolué</p>
+					<p>1993 : donation de sa 1ère base de code en domaine publique (pas GPL) pour fabriquer des navigateurs : libwww, qui sera supplée par libcurl</p>
+					<p>Car le 1er browser WorldWideWeb, ne tournait que sur des machines NeXT propriétaires</p>
+					<p>Fun fact : 30 ans après, un des GAFA cherche à refaire du Web un walled garden</p>
+					<p>... avance rapide en 2020</p>
 				</section>
 
+				<section>
+					<h2>Les papas</h2>
+					<p>Tim Berners-Lee, Frystyk Nielsen, Bert Bos/Håkon Wium Lie (CSS/Opera), Robert Cailliau (W3C)</p>
+					<p></p>
+				</section>
+
+				<section>
+					<p>respec meetup</p>
+					
+				</section>
 				<section>
 					<h2>What's up, Web ?</h2>
 					<p>On a plusieurs navigateurs : Safari, Chrome, Firefox, IE, Opera, ...</p>
@@ -548,7 +559,7 @@
 <p>Une spécification n'est qu'un document HTML avec des schémas (WebIDL) qui décrit comment faire les choses</p>
 <p>En rédaction collaborative, elles sont toutes sous github</p>
 <p>Outil open source de rédaction de specs : <em>ReSpec</em>, outil du W3C : <a href="https://github.com/w3c/respec">https://github.com/w3c/respec</a> . C'est un script JS et CSS dans une page HTML</p>
-<p>Outil méconnu mais excellent pour toute rédaction de document technique, pas seulement pour des specs web (vs Word/LaTeX)</p>
+<p>Méconnu mais excellent pour toute rédaction de document technique, pas seulement pour des specs web (vs Word/LaTeX)</p>
 <p>Voir les specs comme un super Wikipedia du web - très dense</p>
 </section>
 
@@ -611,7 +622,7 @@
 
 				<section>
 					<h2>Un cas industriel & créa particulier</h2>
-					<p>Les specs sont publiques</p>
+					<p>Les specs sont publiques !</p>
 					<p>Nimporte qui peut y contribuer, leurs auteurs répondent - en général</p>
 					<p>Les fabricants/OSS implémentent ou non les specs selon leur propre roadmap</p>
 					<p>Les specs sont une prédiction - non garantie - de ce qui va arriver dans les navigateurs et WebViews pour app natives</p>
