--- a/laurentperez.fr/talks/webkit/index.html
+++ b/laurentperez.fr/talks/webkit/index.html
@@ -118,23 +118,18 @@
 
 				<section>
 					<h2>What's up, Web ?</h2>
+					<p>Tim Berners-Lee, Frystyk Nielsen, Bert Bos/Håkon Wium Lie (CSS/Opera), Robert Cailliau (W3C)</p>
 					<p>1991 : le <a href="http://line-mode.cern.ch/www/hypertext/WWW/TheProject.html"> Line Mode Browser</a></p>
 					<p>1993 : donation de sa 1ère base de code en domaine publique (pas GPL) pour fabriquer des navigateurs : libwww, qui sera supplée par libcurl</p>
-					<p>Car le 1er browser WorldWideWeb, ne tournait que sur des machines NeXT propriétaires</p>
-					<p>Fun fact : 30 ans après, un des GAFA cherche à refaire du Web un walled garden</p>
-					<p>... avance rapide en 2020</p>
+					<p>Car le 1er browser WorldWideWeb, ne tournait que sur des systèmes NeXT propriétaires - et chers</p>
 				</section>
 
 				<section>
-					<h2>Les papas</h2>
-					<p>Tim Berners-Lee, Frystyk Nielsen, Bert Bos/Håkon Wium Lie (CSS/Opera), Robert Cailliau (W3C)</p>
-					<p></p>
+					<p><a href="https://worldwideweb.cern.ch/browser">WorldWideWeb</a></p>
+					<p>Le 1er "design system" : <a href="https://www.w3.org/History/19921103-hypertext/hypertext/WWW/MarkUp/Tags.html">20 balises HTML</a></p>
+					<p>... avance rapide en <a href="https://www.reddit.com/r/funny/comments/ebzhdi/browsing_in_2019/">2020</a></p>
 				</section>
 
-				<section>
-					<p>respec meetup</p>
-					
-				</section>
 				<section>
 					<h2>What's up, Web ?</h2>
 					<p>On a plusieurs navigateurs : Safari, Chrome, Firefox, IE, Opera, ...</p>
