--- a/laurentperez.fr/talks/webkit/index.html
+++ b/laurentperez.fr/talks/webkit/index.html
@@ -68,7 +68,7 @@
 
 				<section>
 					<h2>Nos hôtes</h2>
-					<p>AFUP / salle TODO</p>	
+					<p><img width="200px" src="https://laurentperez.fr/talks/css1/afup.png"/> / salle TODO</p>	
 				</section>
 
 
