--- a/laurentperez.fr/talks/webkit/index.html
+++ b/laurentperez.fr/talks/webkit/index.html
@@ -119,6 +119,7 @@
 				<section>
 					<h2>What's up, Web ?</h2>
 					<p>Tim Berners-Lee, Frystyk Nielsen, Bert Bos/Håkon Wium Lie (CSS/Opera), Robert Cailliau (W3C)</p>
+					<p><small>Nielsen n'est pas que le co-auteur de HTTP/1.1, il a aussi co écrit SOAP, nobody's perfect</small></p>
 					<p>1991 : le <a href="http://line-mode.cern.ch/www/hypertext/WWW/TheProject.html"> Line Mode Browser</a></p>
 					<p>1993 : donation de sa 1ère base de code en domaine publique (pas GPL) pour fabriquer des navigateurs : libwww, qui sera supplée par libcurl</p>
 					<p>Car le 1er browser WorldWideWeb, ne tournait que sur des systèmes NeXT propriétaires - et chers</p>
