--- a/laurentperez.fr/talks/webkit/index.html
+++ b/laurentperez.fr/talks/webkit/index.html
@@ -65,7 +65,10 @@
 					<p>Hôte TODO / Meetup Web Front #2</p>
 					<img src="mth.jpg" width="100px"/>
 				</section>
-
+<section>
+	<img src="mth.jpg" width="100px"/>
+	<img src="sponso.png"/>
+</section>
 				<section>
 					<h2>Nos hôtes</h2>
 					<p><img width="200px" src="https://laurentperez.fr/talks/css1/afup.png"/> / salle TODO</p>	
