--- a/laurentperez.fr/talks/webkit/index.html
+++ b/laurentperez.fr/talks/webkit/index.html
@@ -68,13 +68,14 @@
 <section>
 	<img src="mth.jpg" width="100px"/>
 	<img src="sponso.png"/>
+	<p>merci aux sponsors</p>
 </section>
 				<section>
 					<h2>Nos hôtes</h2>
 					<p><img width="200px" src="https://laurentperez.fr/talks/css1/afup.png"/> / salle TODO</p>	
 				</section>
 
-
+<!--
 				<section>
 					<h2>About your speaker</h2>
 					<p>@laurentperez - Slack Comm MPL</p>
@@ -82,12 +83,13 @@
 					<p>Back et front</p>
 					<p>❤️ le web</p>
 				</section>
+				-->
 
 				<section>
 					<h2>About you</h2>
 					<p>Ratio iOS/Android/autres dans la salle ?</p>
 					<p>Qui s'est servi d'un navigateur web ce jour ?</p>
-					<p>WebKit, Servo, Gecko, Trident... ?</p>
+					<p>WebKit, Blink, Servo, Gecko, Trident, Presto ... ?</p>
 				</section>
 
 				<section>
@@ -100,7 +102,7 @@
 							<li>un composant de dessin qui utilise une libraire graphique (ex: CoreGraphics pour Apple, Cairo GTK pour Linux/Win, Skia pour Android, HarfBuzz pour les glyphes ...)</li>
 							<li>un composant pour éxécuter du JS (ex: JavaScriptCore sous WebKit, V8 sous Blink/Node, SpiderMonkey sous Firefox, Chakra sous IE/Edge)</li>
 							<li>un composant pour inspecter et développer (ex: WebInspector, DevTools)</li>
-							<li>un pilote pour jouer des tests auto, des conteneurs de cookies ou bdd, des masses de tests, etc...</li>
+							<li>un pilote pour jouer des tests auto, des conteneurs de cookies ou bdd, des masses de tests, une API pour extensions, etc...</li>
 							
 						</ul>
 						<p>oulala le 1er slide est déjà technique<br>
@@ -126,11 +128,12 @@
 					<p>1991 : le <a href="http://line-mode.cern.ch/www/hypertext/WWW/TheProject.html"> Line Mode Browser</a></p>
 					<p>1993 : donation de sa 1ère base de code en domaine publique (pas GPL) pour fabriquer des navigateurs : libwww, qui sera supplée par libcurl</p>
 					<p>Car le 1er browser WorldWideWeb, ne tournait que sur des systèmes NeXT propriétaires - et chers</p>
+					<img width="180px" src="https://upload.wikimedia.org/wikipedia/en/1/1d/NeXTSTEP_desktop.png" alt="">
 				</section>
 
 				<section>
 					<p><a href="https://worldwideweb.cern.ch/browser">WorldWideWeb</a></p>
-					<p>Le 1er "design system" : <a href="https://www.w3.org/History/19921103-hypertext/hypertext/WWW/MarkUp/Tags.html">20 balises HTML</a></p>
+					<p>Le 1er "design system" UX sur 4 pages A4 : <a href="https://www.w3.org/History/19921103-hypertext/hypertext/WWW/MarkUp/Tags.html">15 balises HTML</a></p>
 					<p>... avance rapide en <a href="https://www.reddit.com/r/funny/comments/ebzhdi/browsing_in_2019/">2020</a></p>
 				</section>
 
@@ -268,7 +271,7 @@
 				</section>
 				<section>
 					<h2>🌐 One Web. Desktop et mobile 🌐</h2>
-					<p>Mozilla et Microsoft ont raté le virage mobile</p>
+					<p>Mais...</p>
 					<p>Apple interdit tout autre moteur que le sien dans les apps iOS, Chrome et Firefox iOS ne sont que des coquilles autour de WebKit</p>
 					<p>Interrogations autour de Huawei qui pourrait forker WebKit ou Blink</p>
 					<p>Samsung, Sony, Nokia, HTC &amp; all utilisent le moteur de Google <em>per</em> Android
@@ -304,7 +307,7 @@
 									<td>XBOX, IE &lt; 2020</td>
 								</tr>
 								<tr>
-									<td>Dérivé Firefox/Opera Mini</td>
+									<td>Dérivé FirefoxOS/Opera Mini</td>
 									<td>smart feature phones KaiOS % &gt; iOS en Inde, Opera Mini est un moteur cloud</td>
 								</tr>
 							</tbody>
@@ -318,8 +321,8 @@
 					</p>
 					<p>Sur desktop le % est un peu différent : Firefox + IE ont ~15% du marché</p>
 					<p>Sur l'embarqué Consoles, Smart TV, Kiosques : WebKit devant Blink </p>
-					<p>Corée du Nord : fork de Gecko, 'Naenara' (Mon Pays) pour visiter des sites réservés <br>
-					<br><img src="kim.jpg" width="120px" style="border: none" alt="fdp"></p>
+					<p>Corée du Nord : fork de Gecko, 'Naenara' (Mon Pays) pour visiter des sites réservés. USA/Chine : pas pire cf FISA 702/Tencent <br>
+					<br><img src="kim.jpg" width="120px" style="border: none" alt="fdp"><img src="nsa.png" width="180px" style="border: none" alt="fdp"></p>
 				</section>
 
 				<section>
@@ -375,7 +378,7 @@
 					<p>UI Steam, Battle.net, Kindle Amazon</p>
 					<p>consoles Sony, Nintendo, outils Adobe (AEM Forms)</p>
 					<p>... de récents commits de Sony, la PS5 se profile</p>
-					<p>Nintendo Switch hackée à cause d'un vieux WebKit - 6 mois de delta</p>
+					<p>Nintendo Switch hackée à cause d'un <a href="https://www.youtube.com/watch?v=xkdPjbaLngE">vieux WebKit</a> - 6 mois de delta</p>
 					<img src="mario.png" width="300px" alt="">
 					<p>embarqué dans automobile, Smart TVs, kiosques (NetFront) ...</p>
 				</section>
@@ -460,10 +463,9 @@
 				<section>
 					<h3>C'est open source</h3>
 					<p>Si des fabricants qui font des revenus sont derrière Blink, WebKit, Gecko/Servo, le code lui reste libre</p>
-					<p>Bientôt un fork de Huawei ?</p>
-					<p>Les fabricants partagent une suite de tests de non reg du W3C : <a href="http://github.com/w3c/web-platform-tests">WPT Web Platform Tests</a>.</p>
-					<p>Le fameux ACID test <a href="http://web-platform-tests.live/acid/acid3/test.html">est là</a> (Ian Hickson, co rédacteur de CSS2, mainteneur de la spec HTML5... ou Ken Kesey, LSD toussa)</p>
-					<p>C'est pas /si/ difficile de contribuer (DevTools/WebInspector est la porte d'entrée la plus aisée, avec les traductions)</p>
+					<p>Les fabricants partagent une suite de tests de non reg : <a href="http://github.com/w3c/web-platform-tests">WPT Web Platform Tests</a>.</p>
+					<p>Le fameux ACID test <a href="http://w3c-test.org/acid/acid3/test.html">est là</a> (Ian Hickson, co rédacteur de CSS2, mainteneur de la spec HTML5... ou Ken Kesey, LSD toussa)</p>
+					<p>C'est pas /si/ difficile de contribuer : DevTools/WebInspector est la porte d'entrée la plus aisée, avec les traductions</p>
 					<p>... petite plongée dans WebKit</p>
 				</section>
 
@@ -471,7 +473,7 @@
 					<h2>git clone webkit</h2>
 					<img src="logo.png" style="width:120px" style="border: none"/>
 					<p><a href="https://www.webkit.org/building/checkout.html">https://www.webkit.org/building/checkout.html</a></p>
-					<p>4 GB. 35000 tests. 900MB de sources C++, 210000 commits. Projet XCode ou Visual Studio</p>
+					<p>4 GB. 35000 tests. 900MB de sources C++, 2/17MLoC, 215000 commits. Projet XCode ou Visual Studio</p>
 					<p>Fun fact : ~70% des 4GB sont des tests et ressources de tests (pages HTML, images, vidéos, audio, fichiers JS/CSS)</p>
 					<p>25 minutes de compile sur un très bon CPU</p>
 					<p>dedans : WebCore, JavaScriptCore, WebInspectorUI, WPE, WTF, MiniBrowser, DumpRenderTree, ...</p>
@@ -498,7 +500,7 @@
 					<section>
 						<h2>Ports de Sony et EA</h2>
 						<p>Contribuent en commit retour ou publient les sources de leurs changements</p>
-						<blockquote cite="https://trac.webkit.org/wiki/SonyWebKitWork2016">Q @ Sony : &ldquo;Why did you choose WebKit?<br>
+						<blockquote cite="https://trac.webkit.org/wiki/SonyWebKitWork2016">Q @ SONY : &ldquo;Why did you choose WebKit?&rdquo;<br>
 							Started before the Blink branch.<br>
 							(...)<br>
 							Chrome is the "Google Show", not good opportunities to contribute due to their army of engineers banging on it.<br>
@@ -506,7 +508,9 @@
 							Blink is more about feature-feature-feature&rdquo;
 						</blockquote>
 						<p>EAWebKit : <a href="https://gpl.ea.com/eawebkit.html">https://gpl.ea.com/eawebkit.html</a> : sources du fork pour PC/XBox/PS4, publiées en .zip à chaque sortie de jeu</p>
-						<p>Pas de signaux de contribution de Nintendo, peut-être frileux suite à leurs hacks WebKit, ou Culte du Secret... à la Apple</p>
+						<small style="display: block;">UI de <a href="http://twvideo01.ubm-us.net/o1/vault/gdc2015/presentations/Chin_YeeCheng_HowToImplement.pdf">SimCity</a> : How to Implement AAA Game UI in 100% 
+							HTML and JavaScript (GDC 2015)</small>
+						<p>Pas de signaux de contribution de Nintendo, hackés + Culte du Secret... à la Apple</p>
 					</section>
 
 					<section>
