index talks et relecture origin web

--- a/laurentperez.fr/talks/index.html
+++ b/laurentperez.fr/talks/index.html
@@ -1,1 +1,41 @@
-ask me
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <title>laurentperez.fr::talks</title>
+    <script>
+    </script>
+    <style>
+        body {
+            font-family: "Source Sans Pro", Helvetica, sans-serif;
+        }
+    </style>
+</head>
+
+<body>
+    <section>
+        <h1>laurentperez.fr::talks</h1>
+        <section>
+                <p>Meetups Web Front @ Montpellier Tech Hub</p>
+                <p><img src="css1/mth.jpg" width="40px"/><img width="80px" src="css1/afup.png"/></p>
+                <small><a href="https://twitter.com/laurentperez">@laurentperez</a> / Slack Comm MPL</small>
+                
+            </section>
+        <ul>
+            <li>
+                    <p>SLIDES : <a href="https://laurentperez.fr/talks/css1/">"Les CSS envoûtées par la magie d'Houdini"</a></p>
+                    <p>Dessin et animations nouvelle génération, et plus encore</p>
+                    <p><img width="120px" src="css1/awe.png" alt=""></p>
+                    <p>Septembre 2019 / Meetup AFUP @ <a href="https://smag.tech/">SMAG / InVivo</a></p>
+            </li>
+            <li>
+                    <p>SLIDES : <a href="https://laurentperez.fr/talks/webkit/">"A la découverte des moteurs de rendu de Chrome Safari et Firefox... mais pas que"</a></p>
+                    <p>Du HTML aux pixels, comment fonctionne un moteur de rendu ?</p>
+                    <p><img src="webkit/logo.png" style="width:120px"></p>
+                    <p>Janvier 2020 / Meetup AFUP @ <a href="https://tbd/">TBD</a></p>
+                
+            </li>
+        </ul>
+    </section>
+</body>
+</html>
