--- a/laurentperez.fr/talks/webkit/index.html
+++ b/laurentperez.fr/talks/webkit/index.html
@@ -304,7 +304,7 @@
 									<td>Firefox, Fennec (mobile), Thunderbird</td>
 								</tr>
 								<tr>
-									<td>Trident/EdgeHTML</td>
+									<td>Trident/Spartan/EdgeHTML</td>
 									<td>XBOX, IE &lt; 2020</td>
 								</tr>
 								<tr>
@@ -344,6 +344,11 @@
 					<p>Youtube + Chrome = pubs = max 💰 💰 💰 pour Google</p>
 					<p>MS a clairement indiqué ne pas vouloir forker Blink et veut réouvrir des API bloquées pour les adblockers (reddit AMA Juin 2019)</p>
 					<p>Mozilla en tension avec Google : ils n'iront pas vers Blink, ils ont déjà un moteur Servo next-gen</p>
+				</section>
+
+				<section>
+					<p><img src="edge.png" width="400px" alt=""></p>
+					<p><img src="etp.png" alt=""></p>
 				</section>
 
 				<section>
