--- a/laurentperez.fr/talks/webkit/index.html
+++ b/laurentperez.fr/talks/webkit/index.html
@@ -678,6 +678,7 @@
 					<p>🖼️ Où on va descendre dans les Preload Scanners, DOM et CSSOM, le Layout, la Peinture, le Compositing 🎨</p>
 					<p>... grâce aux sources de WebKit</p>
 					<p>MERCI</p>
+					<small>nb : je cherche des speakers pour un meetup web généraliste</small>
 				</section>
 
 				<section>
