--- a/laurentperez.fr/talks/webkit/index.html
+++ b/laurentperez.fr/talks/webkit/index.html
@@ -64,8 +64,9 @@
 					<h3>Comment fonctionne un moteur de rendu ?</h3>
 					<h3>Talk 2/2</h3>
 					-->
-					<p>Hôte TODO / Meetup Web Front #2</p>
+					<p>Hôte TODO</p>
 					<img src="mth.jpg" width="100px"/>
+					<img width="200px" src="https://laurentperez.fr/talks/css1/afup.png"/>
 				</section>
 <section>
 	<img src="mth.jpg" width="100px"/>
