--- a/laurentperez.fr/talks/webkit/index.html
+++ b/laurentperez.fr/talks/webkit/index.html
@@ -95,6 +95,12 @@
 				</section>
 
 				<section>
+						<h2>Multiple Personality Disorder</h2>
+						<p>Mozilla/5.0 (Macintosh; Intel Mac OS X 10_12_6) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/81.0.4016.0 Safari/537.36 Edg/81.0.387.0</p>
+						<p><img src="trust.jpg" alt=""></p>
+					</section>
+
+				<section>
 					<h2>Un moteur n'est <em>pas un navigateur</em> ⛵</h2>
 					<h4>Mais une suite de composants pour afficher et interagir avec une page web</h4>
 					<p>
