--- a/laurentperez.fr/talks/webkit/index.html
+++ b/laurentperez.fr/talks/webkit/index.html
@@ -58,7 +58,7 @@
 			<div class="slides">
 				<section>
 					<h2>"Du HTML aux pixels"</h2>
-					<h3>A la découverte des moteurs de Chrome, Safari, IE et Firefox... mais pas que</h3>
+					<h3>Plongée dans les moteurs de Chrome, Safari, IE et Firefox... mais pas que</h3>
 					<h3>Talk 1/2</h3>
 					<!--
 					<h3>Comment fonctionne un moteur de rendu ?</h3>
