--- a/laurentperez.fr/talks/webkit/index.html
+++ b/laurentperez.fr/talks/webkit/index.html
@@ -676,7 +676,7 @@
 					<p>Shape Detection API (code barre, visage, texte)</p>
 					<p>SMS Receiver API, Contact API (ship !)</p>
 					<p>Payment API (GooglePay, ApplePay dans le browser)</p>
-					<p>Mise en valeur des sites PWA acceptées dans les App Stores</p>
+					<p>Badging API</p>
 					<p>SVG dans les favicon (! shipped CR80)</p>
 					<p>remplacement de &lt;iframe&gt; par &lt;portal&gt; (Google I/O 2019)</p>
 				</section>
