--- a/laurentperez.fr/talks/webkit/index1.html
+++ b/laurentperez.fr/talks/webkit/index1.html
@@ -363,13 +363,7 @@
 						}</p>
 				</section>
 
-				<section>
-					<h2>Gecko ?</h2>
-					<p>Echec de percée dans le mobile - travaux repris par KaiOS</p>
-					<p>Pas d'embarqué !</p>
-					<p>Le moteur Servo déverse dans Gecko ses meilleurs morceaux : WebRender, Pathfinder</p>
-					<p>Firefox, Firefox Preview/Fenix, Firefox Reality</p>
-				</section>
+			
 
 				<section>
 					<h2>✈️ Un moteur n'est pas un navigateur. Un navigateur se sert d'un moteur. ✈️</h2>
@@ -440,7 +434,6 @@
 					</ul>
 					<p>Mozilla reste en pointe sur les respects des usages - ils ont sû diversifier leurs revenus de la search bar entre Google, Yahoo, Yandex, Baidu, Amazon pour ne pas dépendre que de Google</p>
 					<p>Si la <em>Fondation</em> Mozilla est non lucratif, Mozilla <em>Corporate</em> est un business mais particulier : pas d'actionnaires, pas de dividendes, pas de stock options</p>
-					<p><a href="https://donate.mozilla.org/fr">donate.mozilla.org</a></p>
 				</section>
 
 				<section>
@@ -449,7 +442,18 @@
 					<small>Les compagnies les plus riches du monde <a href="https://www.forbes.com/powerful-brands/list/#tab:rank">Forbes 2019</a></small>
 					<p>Les revenus de Moz proviennent de moteurs de recherche : par effet de bord, de la publicité (Ads, Bing, Baidu)</p>
 					<p><a href="https://brave.com/fr/">Brave</a> browser qui propose une rémunération des ads en cycle fermé via cryptomonnaie - Eich, ex CEO Moz, inventeur du JS</p>
-					<p>... le modèle économique des 3/4 des fabricants reste empreint d'ad-tech et de consumérisme physique ou digital</p>
+					<p>... le modèle économique des 3/4 des fabricants reste empreint d'ad-tech et de consumérisme physique ou digital, Moz tente des alternatives</p>
+
+				</section>
+
+				<section>
+					<h2>Mozilla : Gecko ?</h2>
+					<p>Echec de percée dans le mobile - travaux repris par KaiOS</p>
+					<p>Pas d'embarqué !</p>
+					<p>Le moteur Servo déverse dans Gecko ses meilleurs morceaux : WebRender, Pathfinder</p>
+					<p>pour Firefox, Firefox Preview/Fenix, Firefox Reality</p>
+					<p>... mais Moz licencie et passe aux services payants : FVPN</p>
+					<p><a href="https://donate.mozilla.org/fr">donate.mozilla.org</a></p>
 				</section>
 
 				<section>
