--- a/laurentperez.fr/talks/webkit/index.html
+++ b/laurentperez.fr/talks/webkit/index.html
@@ -64,9 +64,12 @@
 					<h3>Comment fonctionne un moteur de rendu ?</h3>
 					<h3>Talk 2/2</h3>
 					-->
-					<p>Hôte TODO</p>
+					<p><a href="https://ela.st/mth-opening-view">Montpellier Tech Hub</a>
+					</p>
 					<img src="mth.jpg" width="100px"/>
 					<img width="200px" src="https://laurentperez.fr/talks/css1/afup.png"/>
+					<img width="200px" src="https://2018.sunny-tech.io/images/logos/tabmo.jpg" alt="">
+					<br>
 				</section>
 <section>
 	<img src="mth.jpg" width="100px"/>
@@ -74,7 +77,7 @@
 </section>
 				<section>
 					<h2>Nos hôtes</h2>
-					<p><img width="200px" src="https://laurentperez.fr/talks/css1/afup.png"/> / salle TODO</p>	
+					<p><img width="200px" src="https://laurentperez.fr/talks/css1/afup.png"/><img width="200px" src="https://2018.sunny-tech.io/images/logos/tabmo.jpg" alt=""></p>	
 				</section>
 
 <!--
@@ -377,6 +380,8 @@
 					<p>Pas d'embarqué !</p>
 					<p>Le moteur Servo déverse dans Gecko ses meilleurs morceaux : WebRender, Pathfinder</p>
 					<p>Firefox, Firefox Preview/Fenix, Firefox Reality</p>
+					<p>... mais Moz licencie et passe aux services payants : FVPN</p>
+					<p><a href="https://donate.mozilla.org/fr">donate.mozilla.org</a></p>
 				</section>
 
 				<section>
