--- a/laurentperez.fr/talks/webkit/index.html
+++ b/laurentperez.fr/talks/webkit/index.html
@@ -143,6 +143,7 @@
 				</section>
 
 				<section>
+					<h2>30 ans de &lt;balises/&gt;</h2>
 					<p>Le 1er "design system" - composants textuels - sur 4 pages A4 : <a href="https://www.w3.org/History/19921103-hypertext/hypertext/WWW/MarkUp/Tags.html">15 balises HTML</a></p>
 					<p>assez peu de nouvelles balises ont été ajoutées</p>
 					<p>Fin 2019 : 1er groupe de standardisation de design tokens - <a href="https://www.w3.org/community/design-tokens/">W3C DTCG</a></p>
@@ -375,16 +376,6 @@
 				</section>
 
 				<section>
-					<h2>Gecko ?</h2>
-					<p>Echec de percée dans le mobile - travaux repris par KaiOS</p>
-					<p>Pas d'embarqué !</p>
-					<p>Le moteur Servo déverse dans Gecko ses meilleurs morceaux : WebRender, Pathfinder</p>
-					<p>Firefox, Firefox Preview/Fenix, Firefox Reality</p>
-					<p>... mais Moz licencie et passe aux services payants : FVPN</p>
-					<p><a href="https://donate.mozilla.org/fr">donate.mozilla.org</a></p>
-				</section>
-
-				<section>
 					<h2>✈️ Un moteur n'est pas un navigateur. Un navigateur se sert d'un moteur. ✈️</h2>
 					<p>Airbus et Boeing <em>partagent</em> des moteurs General Electric, Rolls Royce, Trent : ce n'est pas le même avion == pas le même <em>navigateur</em></p>
 					<p>Une compagnie peut changer l'intérieur de l'avion (Singapore, Qatar Airlines, Air France = Apple, Google, Samsung, Sony)</p>
@@ -469,6 +460,8 @@
 					<h2>Mozilla : Gecko ?</h2>
 					<p>Echec de percée dans le mobile - travaux repris par KaiOS</p>
 					<p>Pas d'embarqué !</p>
+					<small>une des racines de l'échec de Mozilla, avec le code bloat de Netscape</small>
+
 					<p>Le moteur Servo déverse dans Gecko ses meilleurs morceaux : WebRender, Pathfinder</p>
 					<p>pour Firefox, Firefox Preview/Fenix, Firefox Reality</p>
 					<p>... mais Moz licencie et passe aux services payants : FVPN</p>
@@ -681,6 +674,10 @@
 					<p>Les specs sont une prédiction - non garantie - de ce qui va arriver dans les navigateurs et WebViews pour app natives</p>
 					<p>Suivre <a href="https://twitter.com/intenttoship">@intenttoship</a> pour savoir quand ça va arriver sous Firefox ou Chrome</p>
 					<p>Suivre les commits WebKit pour savoir quand ça va arriver sous Safari</p>
+				</section>
+
+				<section>
+				<img width="600px" src="ship.png" alt="">
 				</section>
 
 				<section>
