--- a/laurentperez.fr/talks/webkit/index1.html
+++ b/laurentperez.fr/talks/webkit/index1.html
@@ -451,6 +451,8 @@
 					<h2>Mozilla : Gecko ?</h2>
 					<p>Echec de percée dans le mobile - travaux repris par KaiOS</p>
 					<p>Pas d'embarqué !</p>
+					<small>une des racines de l'échec de Mozilla, avec le code bloat de Netscape</small>
+
 					<p>Le moteur Servo déverse dans Gecko ses meilleurs morceaux : WebRender, Pathfinder</p>
 					<p>pour Firefox, Firefox Preview/Fenix, Firefox Reality</p>
 					<p>... mais Moz licencie et passe aux services payants : FVPN</p>
@@ -614,6 +616,10 @@
 					<p>Les specs sont une prédiction - non garantie - de ce qui va arriver dans les navigateurs et WebViews pour app natives</p>
 					<p>Suivre <a href="https://twitter.com/intenttoship">@intenttoship</a> pour savoir quand ça va arriver sous Firefox ou Chrome</p>
 					<p>Suivre les commits WebKit pour savoir quand ça va arriver sous Safari</p>
+				</section>
+
+				<section>
+				<img width="600px" src="ship.png" alt="">
 				</section>
 
 				<section>
