--- a/laurentperez.fr/talks/webkit/index1.html
+++ b/laurentperez.fr/talks/webkit/index1.html
@@ -496,7 +496,7 @@
 				<section>
 					<h3>C'est open source</h3>
 					<p>Si des fabricants qui font des revenus sont derrière Blink, WebKit, Gecko/Servo, le code lui reste libre</p>
-					<p>Les fabricants <em>partagent</em> une suite de tests de non reg : <a href="http://github.com/w3c/web-platform-tests">WPT Web Platform Tests</a>.</p>
+					<p>Les fabricants <em>partagent</em> une suite de tests de non reg : <a href="http://wpt.fyi">WPT Web Platform Tests</a></p>
 					<p>Le fameux ACID test <a href="http://w3c-test.org/acid/acid3/test.html">est là</a> (Ian Hickson, co rédacteur de CSS2, mainteneur de la spec HTML5... ou Ken Kesey, LSD toussa)</p>
 					<p>C'est pas /si/ difficile de contribuer : DevTools/WebInspector est la porte d'entrée la plus aisée, avec les traductions</p>
 					<p>... petite plongée dans WebKit</p>
