--- a/laurentperez.fr/talks/webkit/index1.html
+++ b/laurentperez.fr/talks/webkit/index1.html
@@ -547,6 +547,16 @@
 					</section>
 
 					<section>
+						<p>EAWebKit, Sim City 2K</p>
+						<img src="simc.png" alt="">
+					</section>
+
+					<section>
+						<p>PS4 UI, WebGL</p>
+						<img src="ps4ui.png" alt="">
+					</section>
+					
+					<section>
 <img width="400px" src="graphicscontext.png"/>
 <img width="500px" src="gcports.png"/>
 <p>Exemple de ports pour le rendu graphique : <a href="https://trac.webkit.org/browser/webkit/trunk/Source/WebCore/platform/graphics?order=date&desc=1/">https://trac.webkit.org/browser/webkit/trunk/Source/WebCore/platform/graphics?order=date&desc=1/</a></p>
