--- a/laurentperez.fr/index.html
+++ b/laurentperez.fr/index.html
@@ -31,11 +31,14 @@ main > div {max-width:280px;flex:1;margin:4px;}
 <div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="horizontal" data-theme="light" data-vanity="laurentperez"><a class="LI-simple-link" href='https://fr.linkedin.com/in/laurentperez?trk=profile-badge'>Laurent Perez</a></div>
 
 -->
+	<a href="talks/index.html">my talks<img src="https://www.meetup.com/mu_static/fr-FR/logo--script.004ada05.svg" width="100px" alt=""></a><br>
+	
 <div>
 <a href="https://www.linkedin.com/in/laurentperez/" target="_blank">
 <img src="lkbadge.png"/>
 </a>
 </div>
+
 
 
 <div style="position: relative;
