--- a/laurentperez.fr/talks/index.html
+++ b/laurentperez.fr/talks/index.html
@@ -29,11 +29,15 @@
                     <p>Septembre 2019 / Meetup AFUP @ <a href="https://smag.tech/">SMAG / InVivo</a></p>
             </li>
             <li>
-                    <p>SLIDES : <a href="https://laurentperez.fr/talks/webkit/">"A la découverte des moteurs de rendu de Chrome Safari et Firefox... mais pas que"</a></p>
+                    <p>SLIDES : <a href="https://laurentperez.fr/talks/webkit/index1.html">"Plongée dans les moteurs de rendu de Chrome Safari et Firefox... mais pas que"</a></p>
                     <p>Du HTML aux pixels, comment fonctionne un moteur de rendu ?</p>
                     <p><img src="webkit/logo.png" style="width:120px"></p>
-                    <p>Janvier 2020 / Meetup AFUP @ <a href="https://tbd/">TBD</a></p>
-                
+                    <p>Janvier 2020 / Meetup AFUP @ <a href="https://labs.tabmo.io/">Tabmo Labs</a></p>
+            </li>
+            <li>
+                <p>SLIDES : xxx</p>
+                <p>Layout et compositing, Deep dive dans les rouages de WebKit</p>
+                <p>2020 / TBD</p>
             </li>
         </ul>
     </section>
